Shireesha | #2344 | Adding integration tests for flowsheet attributes.